hexapod/hexapod_ros/log/build_2025-11-10_13-12-50/hexapod_ros/stderr.log
  File "/home/spider/GWEN_V2/SpiderGwen/hexapod/hexapod_ros/install/hexapod_ros/lib/python3.10/site-packages/src/hexapod_teleop.py", line 22
    key _- sys.stdin.read(2)
        ^
SyntaxError: invalid syntax

